# modaryn

./: .gitignore  CLAUDE.md  GEMINI.md  README.ja.md  README.md  custom_weights.yml  modaryn_report.html  pyproject.toml  report.md  scan_report.html  scored_report.md
.github/workflows/: publish.yml
.kiro/specs/add-ci-threshold-check/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/optional-z-score/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/show-logo-on-naked-invoke/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
examples/sample_project/: .user.yml  README.md  dbt_project.yml  profiles.yml
examples/sample_project/models/complex_pipeline/: dim_accounts.sql  dim_channels.sql  dim_dates.sql  dim_products.sql  dim_vendors.sql  fct_cash_flow_statement.sql  fct_customer_product_affinity.sql  fct_customer_retention.sql  fct_customer_segmentation.sql  (+22 more)
examples/sample_project/seeds/: customers.csv  orders.csv  products.csv  raw_customers.csv  raw_marketing_spend.csv  raw_order_items.csv  raw_orders.csv  raw_products.csv  raw_returns.csv  raw_web_sessions.csv
modaryn/: cli.py
modaryn/analyzers/: lineage.py  sql_complexity.py
modaryn/assets/: logo.txt
modaryn/config/: default.yml
modaryn/domain/: model.py
modaryn/loaders/: manifest.py
modaryn/outputs/: __init__.py  graph.py  html.py  logo.py  markdown.py  terminal.py
modaryn/scorers/: score.py
tests/: test_cli.py  test_dbtmodel.py  test_lineage.py  test_logo.py  test_scorer.py
(+22 files in other folders)
